--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "next": "14.3.0-canary.9",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.3.0-canary.9"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.3.0-canary.9"
+    "eslint-config-next": "14.3.0-canary.9",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
